# gfwk

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/cmp/: cmp_ai.c  cmp_ai.h  cmp_ai_coul.c  cmp_ai_soul.c  cmp_appr.c  cmp_appr.h  cmp_drv.c  cmp_drv.h  cmp_operations.c  cmp_operations.h  cmp_ori.c  cmp_ori.h  cmp_pain.c  cmp_pain.h  cmp_shape.c  cmp_shape.h
src/demo/: demo.c  demo.h
src/demo1/: demo1.c  demo1.h
src/kernel/: database.c  database.h  draw.c  draw.h  play.c  play.h  resources.c  resources.h  system.c  system.h
src/menu/: menu.c  menu.h  menu_struct.c  menu_struct.h
src/sc/: sc.c  sc.h  sc_arrow.c  sc_arrow.h  sc_collision.c  sc_collision.h  sc_data.c  sc_data.h  sc_graph.c  sc_graph.h  sc_hunter.c  sc_hunter.h  sc_level.c  sc_level.h  sc_pain.c  sc_pain.h  sc_platform.c  sc_platform.h  sc_soul.c  sc_soul.h
src/sc/engines/: sc_arms.c  sc_arms.h  sc_collision.c  sc_collision.h  sc_draw.c  sc_draw.h  sc_pain.c  sc_pain.h  sc_platform.c  sc_platform.h  sc_tick.c  sc_tick.h
src/sc/objects/: sc_arrow.c  sc_arrow.h  sc_booth.c  sc_booth.h  sc_graph.c  sc_graph.h  sc_hunter.c  sc_hunter.h  sc_level.c  sc_level.h  sc_soul.c  sc_soul.h
src/util/: array.h  diagnostics.h  memory.c  memory.h  mymath.h  random.c  random.h  string_util.h
